Add and Remove Implimented

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo list</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
@@ -13,10 +14,10 @@
             <h1>Today's To Do</h1>
         </div>
         <div class="tasks_input">
-            <form>
-                <input type="text" name="todo_input" placeholder=" What do you plan?">
-                <button type="submit" id="todo_btn">Submit</button>
-            </form>
+            <div class="form">
+                <input type="text" id="todo_input" placeholder=" What do you plan?">
+                <button type="button" id="todo_btn"><i class="fa-sharp fa-solid fa-arrow-right-to-bracket"></i></button>
+            </div>
             <ul id="tasks_lists">
             </ul>
 
