Add interaction checkbox , message when no tasks, Clear completed task functionalities

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,12 @@
         </div>
         <div class="tasks_input">
             <div class="form">
-                <input type="text" id="todo_input" placeholder=" What do you plan?">
+                <input type="text" id="todo_input" placeholder=" What do you plan to day?">
                 <button type="button" id="todo_btn"><i class="fa-sharp fa-solid fa-arrow-right-to-bracket"></i></button>
             </div>
             <ul id="tasks_lists">
             </ul>
+            <button id="clear-completed-btn" title="Checked boxes will be removed👇 when clicked">Clear all completed</button>
 
         </div>
 
